Document application startup arguments in README
Added program arguments section with examples for startup options.